add client side metric
Test Plan: N/A

Reviewers: zhangguanghao1, yangzhe5, zhangduo

Reviewed By: zhangduo

Maniphest Tasks: T7315

Differential Revision: https://phabricator.d.xiaomi.net/D45424

--- a/hbase-client/pom.xml
+++ b/hbase-client/pom.xml
@@ -77,6 +77,11 @@
   <dependencies>
     <!-- Intra-project dependencies -->
     <dependency>
+      <groupId>com.xiaomi.owl</groupId>
+      <artifactId>metric-client</artifactId>
+      <version>1.0.3</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.hbase</groupId>
       <artifactId>hbase-annotations</artifactId>
     </dependency>
