hbase94: add client side metric
Test Plan: N/A

Reviewers: zhangguanghao1, zhangduo, yangzhe5

Reviewed By: yangzhe5

Maniphest Tasks: T7315

Differential Revision: https://phabricator.d.xiaomi.net/D45895

--- a/pom.xml
+++ b/pom.xml
@@ -1179,6 +1179,11 @@
       <version>${ext-log4j.version}</version>
     </dependency>
     <dependency>
+      <groupId>com.xiaomi.owl</groupId>
+      <artifactId>metric-client</artifactId>
+      <version>1.0.3</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.avro</groupId>
       <artifactId>avro</artifactId>
       <version>${avro.version}</version>
