--- a/pom.xml
+++ b/pom.xml
@@ -1016,7 +1016,7 @@
     <htrace-mdh.version>3.1.1-mdh1.0-SNAPSHOT</htrace-mdh.version>
     <minikdc.version>${hadoop-mdh.version}</minikdc.version>
     <rrd-on-hbase.version>1.0.0-SNAPSHOT</rrd-on-hbase.version>
-    <galaxy-sds-core.version>2.0-SNAPSHOT</galaxy-sds-core.version>
+    <galaxy-sds-core.version>2.0.1</galaxy-sds-core.version>
     <slf4j.version>1.6.4</slf4j.version>
     <hadoop-snappy.version>0.0.1-SNAPSHOT</hadoop-snappy.version>
     <clover.version>2.6.3</clover.version>
@@ -2014,6 +2014,17 @@
               <exclusion>
                 <groupId>stax</groupId>
                 <artifactId>stax-api</artifactId>
+              </exclusion>
+            </exclusions>
+          </dependency>
+          <dependency>
+            <groupId>com.xiaomi.infra.galaxy</groupId>
+            <artifactId>galaxy-sds-core</artifactId>
+            <version>${galaxy-sds.version}</version>
+            <exclusions>
+              <exclusion>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-client</artifactId>
               </exclusion>
             </exclusions>
           </dependency>
