--- a/hbase-client/pom.xml
+++ b/hbase-client/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <artifactId>hbase</artifactId>
     <groupId>org.apache.hbase</groupId>
-    <version>0.98.11-mdh2.2.0</version>
+    <version>0.98.11-mdh2.3-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
