--- a/pom.xml
+++ b/pom.xml
@@ -1641,6 +1641,7 @@
                     <value>true</value>
                   </property>
                 </systemProperties>
+                <redirectTestOutputToFile>true</redirectTestOutputToFile>
               </configuration>
             </plugin>
           </plugins>
