add themis dependency
Summary: add themis coprocessor dependency when deploy

Test Plan: manually

Reviewers: huzheng, zhangguanghao1, yangzhe5

Reviewed By: yangzhe5

Subscribers: hbase-help

Differential Revision: https://phabricator.d.xiaomi.net/D50871

--- a/hbase-assembly/pom.xml
+++ b/hbase-assembly/pom.xml
@@ -132,7 +132,6 @@
     <dependency>
       <groupId>com.xiaomi.infra.galaxy</groupId>
       <artifactId>galaxy-sds-core</artifactId>
-      <version>${galaxy-sds-core.version}</version>
       <exclusions>
         <exclusion>
           <groupId>org.apache.hbase</groupId>
@@ -143,6 +142,10 @@
           <artifactId>hbase-server</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>com.xiaomi.infra</groupId>
+      <artifactId>themis-coprocessor</artifactId>
     </dependency>
     <dependency>
       <groupId>com.xiaomi.infra</groupId>
