--- a/hbase-shell/pom.xml
+++ b/hbase-shell/pom.xml
@@ -213,6 +213,17 @@
       <groupId>org.apache.htrace</groupId>
       <artifactId>htrace-core</artifactId>
    </dependency>
+   <dependency>
+    <groupId>com.xiaomi.infra.galaxy</groupId>
+    <artifactId>galaxy-sds-core</artifactId>
+    <version>2.0.1</version>
+    <exclusions>
+      <exclusion>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-client</artifactId>
+      </exclusion>
+    </exclusions>
+   </dependency>
   </dependencies>
   <profiles>
     <!-- Skip the tests in this module -->
