Backport async client
Summary: backport async client to 0.98

Test Plan: UTs

Reviewers: zhangguanghao1, huzheng, yangzhe5

Reviewed By: yangzhe5

Subscribers: hbase-help

Differential Revision: https://phabricator.d.xiaomi.net/D53390

--- a/hbase-client/pom.xml
+++ b/hbase-client/pom.xml
@@ -158,6 +158,18 @@
       <artifactId>log4j</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-recipes</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-framework</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-client</artifactId>
+    </dependency>
   </dependencies>
 
   <profiles>
