--- a/hbase-shell/pom.xml
+++ b/hbase-shell/pom.xml
@@ -216,7 +216,7 @@
    <dependency>
     <groupId>com.xiaomi.infra.galaxy</groupId>
     <artifactId>galaxy-sds-core</artifactId>
-    <version>2.0.1</version>
+    <version>${galaxy-sds-core.version}</version>
     <exclusions>
       <exclusion>
         <groupId>org.apache.hadoop</groupId>
