save acl info when create snapshot, and provide a restoreACL option for clone snapshot API to decide whether to restore acl.
Test Plan: UT

Reviewers: yangzhe5, zhangduo, tianjingyun, zhangguanghao1

Reviewed By: zhangguanghao1

Maniphest Tasks: T8901

Differential Revision: https://phabricator.d.xiaomi.net/D56262

--- a/hbase-protocol/pom.xml
+++ b/hbase-protocol/pom.xml
@@ -177,6 +177,7 @@
                           <include>RowProcessor.proto</include>
                           <include>RPC.proto</include>
                           <include>SecureBulkLoad.proto</include>
+                          <include>Snapshot.proto</include>
                           <include>Tracing.proto</include>
                           <include>VisibilityLabels.proto</include>
                           <include>WAL.proto</include>
