(Backport) All replication requests will be routed through master
Summary: (Backport) All replication requests will be routed through master

Test Plan: all ut passed

Reviewers: huzheng, zhangduo, tianjingyun, wuguoquan, meiyi

Reviewed By: zhangduo

Maniphest Tasks: T9824

Differential Revision: https://phabricator.d.xiaomi.net/D69199

--- a/hbase-protocol/pom.xml
+++ b/hbase-protocol/pom.xml
@@ -182,6 +182,7 @@
                           <include>VisibilityLabels.proto</include>
                           <include>WAL.proto</include>
                           <include>ZooKeeper.proto</include>
+                          <include>Replication.proto</include>
                         </includes>
                       </source>
                       <!--<output>${project.build.directory}/generated-sources/java</output>-->
