--- a/pom.xml
+++ b/pom.xml
@@ -1023,7 +1023,7 @@
     <clover.version>2.6.3</clover.version>
     <jamon-runtime.version>2.3.1</jamon-runtime.version>
     <jettison.version>1.3.1</jettison.version>
-    <netty.version>4.1.4.Final</netty.version>
+    <netty.version>1.0.1-mdh1.2</netty.version>
     <joni.version>2.1.2</joni.version>
     <jcodings.version>1.0.8</jcodings.version>
     <curator.version>2.11.0</curator.version>
@@ -1332,8 +1332,8 @@
         </exclusions>
       </dependency>
       <dependency>
-        <groupId>io.netty</groupId>
-        <artifactId>netty-all</artifactId>
+        <groupId>org.apache.hbase.thirdparty</groupId>
+        <artifactId>hbase-shaded-netty</artifactId>
         <version>${netty.version}</version>
       </dependency>
       <dependency>
